--- a/css/genres.css
+++ b/css/genres.css
@@ -9,3 +9,18 @@
   align-items: flex-start;
   flex-wrap: wrap;
 }
+
+.border-primary {
+  border-radius: 10px;
+  box-shadow: 0 0 25px #0A58BD;
+}
+
+.large {
+  min-height: 3rem;
+  max-height: 3rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
